--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   font-family: sans-serif;
   padding: 90px 20px 0;
@@ -183,4 +182,8 @@ table{
 }
 h3{
   padding: 15px 0 5px;
+}
+#footer{
+  text-align: center;
+  text-decoration: none;
 }
